# BENCHLAB.LinuxSupportKit

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
deploy/systemd/: benchlab.service
packaging/deb/: README.md  control  postinst  postrm  prerm
python/: setup.py
python/clients/: benchlab_client.py
python/examples/: README.md  basic_info.py  fan_control.py  rgb_control.py  stream_sensors.py
python/ros2/: README.md  VALIDATION_STATUS.md  benchlab_ros2_node.py  benchlab_ros2_node.py.old
python/ros2/benchlab_msgs/: CMakeLists.txt  package.xml
python/ros2/benchlab_msgs/msg/: BenchLabTelemetry.msg  CalibrationData.msg  DeviceInfo.msg  FanProfile.msg  FanSensor.msg  PowerSensor.msg  RGBConfig.msg
python/ros2/benchlab_msgs/srv/: ExecuteAction.srv  LoadCalibration.srv  SetCalibration.srv  SetDeviceName.srv  SetFanProfile.srv  SetRGB.srv  StoreCalibration.srv
python/ros2/benchlab_ros2/: package.xml  setup.cfg  setup.py
python/ros2/benchlab_ros2/benchlab_ros2/: __init__.py  benchlab_http_node.py  benchlab_serial_node.py  binary_protocol.py
python/ros2/benchlab_ros2/config/: benchlab_params.yaml
python/ros2/benchlab_ros2/launch/: benchlab_http.launch.py  benchlab_multi_device.launch.py  benchlab_serial.launch.py
src/BenchLab.Cli/: BenchLab.Cli.csproj  Program.cs
src/BenchLab.Platform/: BenchLab.Platform.csproj
src/BenchLab.Platform/Discovery/: BenchlabHandshake.cs  PortDiscovery.cs  SimpleHandshake.cs
src/BenchLab.Platform/Ports/: ISerialPort.cs  SerialPortAdapter.cs
src/BenchLab.Service/: BenchLab.Service.csproj  Program.cs
systemd/: benchlabd.service
tests/BenchLab.Cli.Tests/: CommandTests.cs
tests/BenchLab.Platform.Tests/: BenchLab.Platform.Tests.csproj
tests/BenchLab.Service.Tests/: BenchLab.Service.Tests.csproj  IntegrationTests.cs  MetricsCollectorTests.cs
udev/: 99-benchlab.rules
(+9 files in other folders)
